src/test/compile-fail/attr-before-view-item2.rs
./src/test/compile-fail/attr-before-view-item2.rs:6:2:6:5: [1;31merror:[0m expected item but found use
./src/test/compile-fail/attr-before-view-item2.rs:6   use std;
                                                      ^~~
rt: ---
rt: 0bb1:main:main:                   upcall fail 'explicit failure', src/comp/syntax/parse/parser.rs:112
rt: 0bb1:main:                        domain main @0xa1fd04c root task failed
